syntax = "proto3";

import "google/protobuf/timestamp.proto";

package tari.comms.identity;

message PeerIdentityMsg {
    repeated bytes addresses = 1;
    uint64 features = 2;
    repeated bytes supported_protocols = 3;
    string user_agent = 4;
    // Major node version. This must match the current node's version in order for the connection to be established.
    uint32 major = 5;
    // Minor node version. This indicates minor non-breaking changes.
    uint32 minor = 6;
    // Signature that signs the peer identity
    IdentitySignature identity_signature = 7;
}

message IdentitySignature {
    uint32 version = 1;
    bytes signature = 2;
    bytes public_nonce = 3;
    // The EPOCH timestamp used in the identity signature challenge
    int64 updated_at = 4;
}
